# yolo_segmentation_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
autoannotate/: autoannotate.py  visualize.ipynb
autoannotate/labels/: 1.txt  2.txt  3.txt  4.txt  5.txt
example_data/: note.txt
launch/: demo.launch  start.launch  start_rohit.launch
predict/: predict_images.py  predict_screen.py  predict_video.py  predict_webcam.py
scripts/: prototype.ipynb  ros_node.py
train/: 3_train.py  README.md  bag_to_images.py  bup20_to_yolov8.ipynb  dataset_620_to_yolov8.ipynb  json2yolo.py  split_train_val.ipynb  sweet-pepper-seg.yaml  train.py
