<?xml version="1.0"?>
<package format="2">
  <name>yolo_segmentation_ros</name>
  <version>0.0.0</version>
  <description>The yolo_segmentation_ros package</description>

  <maintainer email="salih285@gmail.com">Salih Marangoz</maintainer>
  <maintainer email="tzaenker@informatik.uni-bonn.de">Tobias Zaenker</maintainer>
  <maintainer email="rohit.menon@uni-bonn.de">Rohit Menon</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
<!--  <depend>mask_rcnn_ros</depend>
  <depend>yolact_ros_msgs</depend>
  <depend>panoptic_mapping_msgs</depend>-->
  <depend>cv_bridge</depend>

  <!-- optional for output detections -->
  <!-- <depend>mask_rcnn_ros</depend> -->
  <!-- <depend>yolact_ros_msgs</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
